<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:showIn="@layout/activity_main"
        tools:context="com.example.android.bluetoothtest.MainActivityFragment">

        <Button
            android:id="@+id/BT_Enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/enable_BT"/>

        <Button
            android:id="@+id/BT_Visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/visible_BT"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/BT_Search"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/Search_BT"
                android:layout_width="0dp"/>

            <Button
                android:id="@+id/BT_SearchNew"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/Search_New"
                android:layout_width="0dp"/>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BT_Contented_List"/>

        <TextView
            android:id="@+id/EmptyMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/empty_text"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>

